Fixes an issue where the quantity badges were being clipped in the product browser

--- a/src/app/product-browser/product-browser.component.css
+++ b/src/app/product-browser/product-browser.component.css
@@ -2,7 +2,7 @@
     display: grid;
     gap: 24px;
     grid-template-columns: repeat(2, 1fr);
-    margin-bottom: 12px;
+    margin: 12px 0px;
 }
 
 @media screen and (min-width: 500px) {
